...
    UINavigationController *nvc = [[UINavigationController alloc] initWithRootViewController:option];
    [self presentViewController:nvc animated:YES completion:nil];
}

- (IBAction)checkoutPressed:(UIBarButtonItem *)sender {
    UIAlertController * view=   [UIAlertController
                                 alertControllerWithTitle:@"Select Demo you want to see"
                                 message:@""
                                 preferredStyle:UIAlertControllerStyleActionSheet];
    UIAlertAction* uiFlow = [UIAlertAction
                             actionWithTitle:@"UI-FLOW Demo"
                             style:UIAlertActionStyleDefault
                             handler:^(UIAlertAction * action)
                             {
                                 //Do some thing here
                                 [self initUIFlow];
                                 [view dismissViewControllerAnimated:YES completion:nil];
...
