...
                    <rect key="frame" x="0.0" y="512" width="320" height="56"/>
                    <color key="backgroundColor" red="0.098039215690000001" green="0.63921568630000003" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="56" id="7LN-KB-Eaq"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                    <state key="normal" title="Confirm Payment"/>
                    <connections>
                        <action selector="confirmPaymentButtonDidTapped:" destination="-1" eventType="touchUpInside" id="mNi-7b-dcu"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vkw-y2-e03" customClass="VTButton">
                    <rect key="frame" x="0.0" y="469" width="320" height="43"/>
...
                        <constraint firstItem="Rtz-qx-dnV" firstAttribute="top" secondItem="QoE-BN-MO1" secondAttribute="bottom" id="fkl-gZ-uip"/>
                        <constraint firstItem="QoE-BN-MO1" firstAttribute="top" secondItem="xc9-KX-6iL" secondAttribute="top" id="oY6-VX-SZu"/>
                        <constraint firstAttribute="trailing" secondItem="QoE-BN-MO1" secondAttribute="trailing" id="ple-W9-nsa"/>
                        <constraint firstItem="Rtz-qx-dnV" firstAttribute="leading" secondItem="xc9-KX-6iL" secondAttribute="leading" id="s4L-2H-ydv"/>
                    </constraints>
                </view>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="KlikBCA User ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="phd-M9-LSi" customClass="VTTextField">
                    <rect key="frame" x="15" y="72" width="290" height="48"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="48" id="sYo-be-gjf"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
...
