...
                            <constraint firstItem="eIK-Km-LOY" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="IX3-cD-Vgt"/>
                            <constraint firstItem="eIK-Km-LOY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Yva-XC-xFp"/>
                            <constraint firstAttribute="trailing" secondItem="eIK-Km-LOY" secondAttribute="trailing" id="gwu-gB-uDj"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eIK-Km-LOY" secondAttribute="bottom" id="ksB-jf-51M"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Cart" id="AKl-uq-Yca">
                        <barButtonItem key="leftBarButtonItem" title="Setting" id="EtV-cv-Hf4">
                            <connections>
                                <action selector="settingPressed:" destination="BYZ-38-t0r" id="Xt6-R4-o65"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Checkout" id="i77-76-L2J">
                            <connections>
                                <action selector="checkoutPressed:" destination="BYZ-38-t0r" id="4Ye-ow-b87"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
