...
                    <connections>
                        <action selector="nextPressed:" destination="-1" eventType="touchUpInside" id="kM6-w5-ZbR"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="24R-cM-Esc">
                    <fontDescription key="fontDescription" name="SourceSansPro-Bold" family="Source Sans Pro" pointSize="15"/>
                    <state key="normal" title="Done">
                        <color key="titleColor" red="0.098039215686274508" green="0.63921568627450975" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <connections>
                        <action selector="donePressed:" destination="-1" eventType="touchUpInside" id="Btx-7i-8Jt"/>
                    </connections>
                </button>
...
