...
     MTAcquiringBankBNI,
     MTAcquiringBankMaybank
     */
    self.banks = @[@{@"type":@(MTAcquiringBankBCA), @"string":@"BCA"},
                   @{@"type":@(MTAcquiringBankBRI), @"string":@"BRI"},
                   @{@"type":@(MTAcquiringBankCIMB), @"string":@"CIMB"},
                   @{@"type":@(MTAcquiringBankMandiri), @"string":@"Mandiri"},
                   @{@"type":@(MTAcquiringBankBNI), @"string":@"BNI"},
                   @{@"type":@(MTAcquiringBankMaybank), @"string":@"Maybank"}];
    
    [self.tableView registerClass:[UITableViewCell class] forCellReuseIdentifier:@"acquiring_bank"];
}

...
